# c3d

./: .gitignore  CMakeLists.txt  main.cpp  v3D.cpp  v3D.h
.cache/clangd/index/: main.cpp.95408936175CAB8C.idx  main.cpp.CA736A5AAA0E2D04.idx  v3d.hpp.8AC72B56CF93CD05.idx  v3d.hpp.8F5186A8420367DC.idx
EGE/: ege.h
demo/: CMakeLists.txt
demo/cube/: CMakeLists.txt
demo/cube/src/: main.cpp
demo/src/: main.cc  main.cpp
include/: c3d.h  main.cpp  v3d.h  v3d.hpp
include/c3d/: aabb.h  bvh_tree.h  c3d.h  camera.h  hittable.h  interval.h  material.h  onb.h  pdf.h  sphere.h  texture.h  vector.h
include/v3d/: Aabb.hpp  BoundingBox.hpp  BvhTree.hpp  Ray.hpp  Renderable.hpp  Renderer.hpp  Sphere.hpp  Vector.hpp  definitions.hpp  v3d.hpp
src/: main.cc  main.cpp  v3D.cpp  v3D.h  v3D.hpp  v3d.cpp  v3d.hpp
