cmake_minimum_required(VERSION 3.5.0)
project(v3d)
set(CMAKE_CXX_FLAGS"-std=c++20 -Wall -mwindows")
set(CMAKE_CXX_FLAGS_RELEASE"-Ofast")
link_directories(${PROJECT_SOURCE_DIR}/lib)
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/lib)
add_executable(v3d src/main.cpp src/v3d.cpp)
target_link_libraries(v3d graphics gdiplus gdi32)